add students to a class
