# src/api.yaml
@@ -446,6 +446,40 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    post:
+      description: add student to a class
+      operationId: addStudentToClass
+      parameters:
+        - name: courseId
+          in: path
+          description: ID of the course
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: classId
+          in: path
+          description: ID of the class
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        description: add student to a class
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddStudentRequest'
+      responses:
+        '201':
+          description: class successfully created
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
@@ -659,6 +693,15 @@ components:
           items:
             $ref: '#/components/schemas/ClassResponse'
 
+    AddStudentRequest:
+      required:
+        - userId
+      properties:
+        userId:
+          type: string
+          format: uuid
+          nullable: false
+    
     QueryParamUuid:
       type: string
       format: uuid
